art refactoring